* Fixed bug in ECC algorithm
* Fixed registration with various image size
* Save focal and wcs data in the swap file using undo/redo
* New candidates star detection algorithm to improve speed and accuracy
* New SNR estimator in photometry analysis
* New button for quick photometry
* New command (and UI button) for tilt estimation
* New command boxselect to specify a selection average
* New commands seqcosme and seqcosme_cfa to remove devian pixels on sequence, using file computed with find_hot
* New choices of degrees of freedom (shift, affine or homography) for global registration
* Seqcrop command can now be used in scripts
* Added autocropping of wide-field images, as well as using a selection for plate solving
* WCS data is now updated after geometric transformations (mirror, rotate and crop)
* Added UI button to plot WCS grid and compass
* Added user catalogue for astrometry annotation
* Added GAIA EDR3 catalogue for astrometry
* Allows to force debayer of SER files

siril 0.99.10.1
06/23/21

* Fixed star detection with resolution < 1.0
* Fixed interpolation issue in global registration
* Fixed timestamp issue with glib < 2.66
* New MAD clipping algorithm

siril 0.99.10
06/11/21

* New drag and drop
* New presets for sequences export
* New choice between h264 and h265 for mp4 export
* New Generalized Extreme Studentized Deviate Test as a new rejection algorithm
* New weighted mean stacking based on bgnoise
* New independent normalization of each channel for color images
* New faster location and scale estimators to replace IKSS with similar accuracy
* New synthetic level for biases
* New 2- or 3-star registration algorithm with rotation
* New SER debayering at preprocess
* New green extraction from CFA
* New option to downsample image while platesolving
* Remember focal and pixel size in astrometry tool
* Updated sampling information after channel extraction and drizzle
* Fixed bands appearing on mean stacking for CFA SER sequences
* Fixed bug in FFT filter