@@ -11,7 +11,7 @@ First Release candidate version for 1.0.0
 * New button for quick photometry
 * New command (and UI button) for tilt estimation
 * New command boxselect to specify a selection average
-* New commands seqcosme and seqcosme_cfa to remove devian pixels on sequence, using file computed with find_hot
+* New commands seqcosme and seqcosme_cfa to remove deviant pixels on sequence, using file computed with find_hot
 * New choices of degrees of freedom (shift, affine or homography) for global registration
 * Seqcrop command can now be used in scripts
 * Added autocropping of wide-field images, as well as using a selection for plate solving
@@ -20,6 +20,7 @@ First Release candidate version for 1.0.0
 * Added user catalogue for astrometry annotation
 * Added GAIA EDR3 catalogue for astrometry
 * Allows to force debayer of SER files
+* Snapshot can now be saved in clipboard (setting in preferences)
 
 v0.99.10.1 June 23, 2021
 Patch version to fix some issues
